--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "WebAppMess",
-  "version": "0.0.1",
+  "name": "webappmess",
+  "version": "1.1.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -32,6 +32,7 @@
     "@ionic/core": "^4.1.2",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "rxjs": "~6.3.3",
@@ -68,5 +69,20 @@
     "plugins": {
       "cordova-plugin-datepicker": {}
     }
+  },
+  "main": "app.module.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/froossv/WebAppMess.git"
+  },
+  "keywords": [
+    "webapp",
+    "sastra",
+    "mess",
+    "admin"
+  ],
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/froossv/WebAppMess/issues"
   }
 }
