--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.2",
     "@ionic/core": "^4.1.2",
+    "body-parser": "^1.18.3",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
   },
@@ -54,7 +57,7 @@
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.4",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
