--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.2",
-    "@ionic/app-scripts": "^3.2.3",
+    "@ionic/app-scripts": "3.2.3",
     "@ionic/core": "^4.1.2",
     "body-parser": "^1.18.3",
     "cordova-plugin-datepicker": "^0.9.3",
@@ -40,9 +40,8 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.29",
     "typescript": "3.1.60",
-    "@ionic/app-scripts": "3.2.3"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
