--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
     "typescript": "3.1.4",
-    "zone.js": "~0.8.29"
+    "zone.js": "~0.8.29",
+    "@angular/compiler": "~7.2.2"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/compiler": "~7.2.2",
     "@angular/language-service": "~7.2.2",
     "@ionic/angular-toolkit": "~1.4.0",
     "@types/jasmine": "~2.8.8",
