--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "7.3.6",
-    "@angular/compiler-cli": "~7.2.2",
+    "@angular-devkit/build-angular": "^0.13.7",
     "@angular/animations": "^7.2.10",
     "@angular/cdk": "^7.3.5",
+    "@angular/cli": "7.3.6",
     "@angular/common": "^7.2.2",
+    "@angular/compiler": "~7.2.2",
+    "@angular/compiler-cli": "~7.2.2",
     "@angular/core": "^7.2.2",
     "@angular/forms": "^7.2.2",
     "@angular/http": "^7.2.2",
@@ -30,10 +32,9 @@
     "@ionic-native/date-picker": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.1.2",
+    "@ionic/angular": "^4.3.1",
     "@ionic/app-scripts": "3.2.3",
     "@ionic/core": "^4.1.2",
-    "@angular-devkit/build-angular": "^0.13.7",
     "body-parser": "^1.18.3",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
@@ -43,9 +44,9 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "rxjs": "~6.3.3",
+    "tar": "^4.4.8",
     "typescript": "3.1.4",
-    "zone.js": "~0.8.29",
-    "@angular/compiler": "~7.2.2"
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
