--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
+    "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "tar": "^4.4.8",
     "typescript": "3.1.4",
