--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.3.1",
-    "@ionic/app-scripts": "3.2.3",
+    "@ionic/app-scripts": "^3.2.3",
     "@ionic/core": "^4.1.2",
     "body-parser": "^1.18.3",
     "cordova-plugin-datepicker": "^0.9.3",
