--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@ionic-native/date-picker": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.3.1",
+    "@ionic/angular": "^4.4.2",
     "@ionic/app-scripts": "^3.2.3",
     "@ionic/core": "^4.1.2",
     "body-parser": "^1.18.3",
@@ -46,7 +46,6 @@
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "tar": "^4.4.8",
-    "typescript": "3.1.4",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -69,7 +68,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.0.0",
     "tslint": "~5.12.0",
-    "typescript": "~3.1.6"
+    "typescript": "^3.1.6"
   },
   "description": "An Ionic project",
   "cordova": {
