--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ionic/angular": "^4.4.2",
     "@ionic/app-scripts": "^3.2.3",
     "@ionic/core": "^4.1.2",
+    "@ionic/storage": "^2.2.0",
     "body-parser": "^1.18.3",
     "cordova-plugin-datepicker": "^0.9.3",
     "core-js": "^2.5.4",
