--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "hammerjs": "^2.0.8",
+    "ionic": "^4.5.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
