--- a/package.json
+++ b/package.json
@@ -13,58 +13,58 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.13.7",
-    "@angular/animations": "^7.2.10",
-    "@angular/cdk": "^7.3.5",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
     "@angular/cli": "7.3.6",
-    "@angular/common": "^7.2.2",
-    "@angular/compiler": "~7.2.2",
-    "@angular/compiler-cli": "~7.2.2",
-    "@angular/core": "^7.2.2",
-    "@angular/forms": "^7.2.2",
-    "@angular/http": "^7.2.2",
-    "@angular/material": "^7.3.5",
-    "@angular/material-moment-adapter": "^7.3.5",
-    "@angular/platform-browser": "^7.2.2",
-    "@angular/platform-browser-dynamic": "^7.2.2",
-    "@angular/router": "^7.2.2",
-    "@ionic-native/core": "^5.0.0",
-    "@ionic-native/date-picker": "^5.2.0",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.5.0",
+    "@angular/common": "^7.2.15",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/core": "^7.2.15",
+    "@angular/forms": "^7.2.15",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^7.3.7",
+    "@angular/material-moment-adapter": "^7.3.7",
+    "@angular/platform-browser": "^7.2.15",
+    "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular/router": "^7.2.15",
+    "@ionic-native/core": "^5.15.0",
+    "@ionic-native/date-picker": "^5.15.0",
+    "@ionic-native/splash-screen": "^5.15.0",
+    "@ionic-native/status-bar": "^5.15.0",
+    "@ionic/angular": "^4.11.3",
     "@ionic/app-scripts": "^3.2.4",
-    "@ionic/core": "^4.1.2",
+    "@ionic/core": "^4.11.0",
     "@ionic/storage": "^2.2.0",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "cordova-plugin-datepicker": "^0.9.3",
-    "core-js": "^2.5.4",
+    "core-js": "^2.6.9",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
-    "ionic": "^4.5.0",
+    "ionic": "^4.12.0",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
-    "tar": "^4.4.8",
+    "tar": "^4.4.13",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.4.0",
+    "@angular/language-service": "^7.2.15",
+    "@ionic/angular-toolkit": "^1.4.1",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~10.12.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.1",
+    "karma": "^4.3.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
